--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-hamburger-menu": "^1.2.1",
-    "react-icons": "^4.9.0"
+    "react-icons": "^4.9.0",
+    "styled-components": "^6.0.0-rc.1"
   }
 }
