--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "eslint-config-next": "13.4.4",
     "next": "13.4.4",
     "react": "18.2.0",
+    "react-beautiful-dnd": "^13.1.1",
     "react-dom": "18.2.0",
     "react-hamburger-menu": "^1.2.1",
     "react-icons": "^4.9.0",
