--- a/package.json
+++ b/package.json
@@ -21,6 +21,8 @@
     "react-hamburger-menu": "^1.2.1",
     "react-hook-form": "^7.44.3",
     "react-icons": "^4.9.0",
+    "react-sortablejs": "^6.1.4",
+    "sortablejs": "^1.15.0",
     "styled-components": "^6.0.0-rc.1",
     "yup": "^1.2.0"
   }
